--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,8 +4,13 @@
         <meta charset="UTF-8"/>
         <title>CLJS Playground Project</title>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <link href="css/material-components-web.min.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+              rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+              rel="stylesheet" />
     </head>
-    <body>
+    <body class="mdc-typography">
         <div id="app"></div>
         <script src="js/app.js"></script>
     </body>
