--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,6 +12,6 @@
     </head>
     <body class="mdc-typography">
         <div id="app"></div>
-        <script src="js/app.js"></script>
+        <script src="/cljs-out/dev-main.js"></script>
     </body>
 </html>
